# jairocloud-groups-manager

./: .dockerignore  Dockerfile  README.md  compose.prod.yaml  compose.yaml  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  supervisord.worker.conf  uwsgi.ini
.devcontainer/: devcontainer.json
app/assets/css/: main.css
app/components/: AppFooter.vue  AppHeader.vue  EmbeddedDs.vue  HeaderSearch.vue
app/i18n/locales/: en.json  ja.json
app/layouts/: default.vue
configs/: app.config.ts  server.config.toml
docs/: content.config.ts
docs/app/components/: DocsHeader.vue
docs/app/layouts/: default.vue  docs.vue
docs/app/pages/: index.vue
docs/content/01.detailed/: index.md
docs/content/02.api/: endpoints.md
docs/content/03.db/: 02.history.md  (+1 more)
nginx/: Dockerfile  shibboleth2.xml
nginx/conf.d/: api.dev.inc  api.inc  app.dev.inc  app.inc  default.conf  shibboleth.inc
server/: config.py  const.py  ext.py  factory.py  worker.py
server/client/: oauth.py  users.py
server/db/: __init__.py  loader.py  proxy.py  service_settings.py  shared.py  upload_history.py
server/schema/: base.py  map_error.py  map_group.py  map_user.py
server/services/: service_settings.py
server/views/: auth.py  route.py  users.py
src/app/: app.config.ts
src/contrib/: __init__.py  developers.py
src/server/: auth.py  config.py  const.py  datastore.py  exc.py  ext.py  factory.py
tests/: conftest.py  helpers.py
tests/data/: map_service.json
tests/db/: test_upload_history.py
tests/schema/: test_map_user.py
tests/unit/: conftest.py
(+153 files in other folders)
