[project]
name = "map-web-ui"
version = "0.1.0"
description = "Web client for managing JAIRO Cloud groups."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "sqlalchemy-utils>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["server"]
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.run]
source = ["server"]
omit = ["*/__init__.py", "*/tests/*"]
